CRM-7165 added details icon

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2275,6 +2275,7 @@ span.icon {
 .add-icon { background-position: -2px -193px;}
 .back-icon { background-position: -2px -65px;}
 .delete-icon { background-position: -179px -99px;}
+.details-icon { background-position: -129px -112px;}
 .button:hover .delete-icon {
     background-image:url("../packages/jquery/jquery-ui-1.8.5/css/custom-theme/images/ui-icons_8d2c27_256x240.png")!important;
 }
