svn merge -r31730:31985 http://svn.civicrm.org/civicrm/branches/trunk.extensions

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -3061,3 +3061,11 @@ div#crm-toolTip
     background-color:#00CC00;
     color:white;
  }
+
+.extension-upgradable {
+    background-color:#FFFFCC !important;
+}
+
+.extension-installed {
+    background-color:#DDFFDD !important;
+}
